...
                Button(
                    role: .destructive,
                    action: {
                        showingDeleteAlert = true
                    }
                ) {
                    Label("Delete", systemImage: "trash")
                }
            }
        }
        .sheet(
            isPresented: $showingEditSheet,
            onDismiss: {
...
